Implement products feature
