# src/products/products.router.ts
@@ -2,20 +2,21 @@ import express from "express";
 import { upload } from "../common/middleware/multer.middleware";
 import { validateRequestBody } from "../common/middleware/validate-request-body.middleware";
 import { validateRequestParams } from "../common/middleware/validate-request-params.middleware";
-import * as productsController from "./products.controller";
-import {
-	createProductSchema,
-	productIdSchema,
-	updateProductSchema,
-} from "./products.validation-schema";
+import productsController from "./products.controller";
+import productsValidationSchema from "./products.validation-schema";
+import { validateRequestQuery } from "../common/middleware/validate-request-query.middleware";
 
 const productsRouter = express.Router();
 
-productsRouter.get("/", productsController.getAllProducts);
+productsRouter.get(
+	"/",
+	validateRequestQuery(productsValidationSchema.findAllProductsQuerySchema),
+	productsController.getAllProducts
+);
 
 productsRouter.get(
 	"/:id",
-	validateRequestParams(productIdSchema),
+	validateRequestParams(productsValidationSchema.productIdSchema),
 	productsController.getSingleProduct
 );
 
@@ -23,20 +24,20 @@ productsRouter.post(
 	"/",
 
 	upload.array("screenshots"),
-	validateRequestBody(createProductSchema),
+	validateRequestBody(productsValidationSchema.createProductSchema),
 	productsController.createProduct
 );
 
 productsRouter.patch(
 	"/:id",
-	validateRequestParams(productIdSchema),
-	validateRequestBody(updateProductSchema),
+	validateRequestParams(productsValidationSchema.productIdSchema),
+	validateRequestBody(productsValidationSchema.updateProductSchema),
 	productsController.updateProduct
 );
 
 productsRouter.delete(
 	"/:id",
-	validateRequestParams(productIdSchema),
+	validateRequestParams(productsValidationSchema.productIdSchema),
 	productsController.deleteProduct
 );
 
